--- a/style.css
+++ b/style.css
@@ -130,29 +130,6 @@ h2 {
     box-shadow: 0 6px 20px rgba(0, 0, 0, 0.2); 
 }
 
-/* Media Queries */
-
-/* Para telas menores que 768px (Ex: Tablets) */
-@media (max-width: 768px) {
-    body {
-        font-size: 14px; /* Reduz o tamanho da fonte para telas menores */
-    }
-
-    .imagepostagem {
-        width: 90%; /* A imagem ocupa 90% da largura da tela */
-    }
-
-    h1, h2, h3 {
-        font-size: 28px; /* Reduz o tamanho dos títulos para dispositivos menores */
-    }
-}
-
-/* Para telas menores que 480px (Ex: Smartphones) */
-@media (max-width: 480px) {
-    body {
-        font-size: 12px; /* Ajusta o tamanho da fonte para smartphones */
-    }
-
     .imagepostagem {
         width: 100%; /* A imagem ocupa 100% da largura da tela em smartphones */
     }
@@ -333,4 +310,33 @@ button {
 
 button:hover {
     background-color: #E5C12A; 
+}
+
+/* ****** MEDIA QUERIES ****** */
+@media (max-width: 768px) {
+    .container, .contato, #formulario-contato {
+        width: 90%;
+    }
+
+    h2 {
+        font-size: 36px;
+    }
+
+    button {
+        padding: 10px;
+    }
+}
+
+@media (max-width: 480px) {
+    h2 {
+        font-size: 28px;
+    }
+
+    .imagepostagem {
+        width: 100%;
+    }
+
+    button {
+        font-size: 14px;
+    }
 }
